--- a/src/main/resources/static/css/review/list.css
+++ b/src/main/resources/static/css/review/list.css
@@ -99,6 +99,7 @@
  .review-item-table{
 	border: 1px solid;
 	border-collapse: collapse;
+	min-width:100%;
 }
 .review-item-table tr{
 	cursor:pointer;
@@ -116,6 +117,7 @@
 	display: inline-block;
 	font-size:.8vw;
 	margin:0;
+	margin-bottom:2%;
 }
 .review-item-content{
     font-size: .8vw;
